try to connect with mysql db

--- a/Loginform/src/main/resources/application.properties
+++ b/Loginform/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url= jdbc:mysql://localhost:3306/lindaschool
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql = true
+spring.thymeleaf.cache=false
+api.base.path=localhost:3306/lindaschool/login
